# OpenWakeWord-runner-rs

./: Cargo.toml  build.rs
src/: lib.rs  main.rs
src/audio/: mod.rs
