[package]
name = "OpenWakeWord-runner-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mel_spec = "0.2.2"
clap = { version = "4.4.6", features = ["derive"] }
tract-onnx = "0.20.19"
cpal = "0.15.2"
ndarray = "0.15.4"
hound = "3.5.1"
anyhow = "1.0.75"
