[package]
name = "OpenWakeWord-runner-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mel_spec = { git = "https://github.com/wavey-ai/mel-spec" }
mel_spec_pipeline = { git = "https://github.com/wavey-ai/mel-spec" }
ndarray = "0.15.6"
#anyhow = "1.0.75"
burn = { git = "https://github.com/tracel-ai/burn.git" }
burn-ndarray = { git = "https://github.com/tracel-ai/burn.git" }


[dev-dependencies]
clap = { version = "4.4.6", features = ["derive"] }
#cpal = "0.15.2"
#hound = "3.5.1"

[build-dependencies]
burn-import = { git = "https://github.com/tracel-ai/burn.git" }
